--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.htffund</groupId>
+  <groupId>com.mozi</groupId>
   <artifactId>auditlog</artifactId>
-  <version>1.0.3</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
   <name>auditlog</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
 
    <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
